test/errors/for1.input.asm

* = $801

    lda #0
start=1
!for i in range(start,4) {
    lda #ixx
}
    rts
